--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/signature-logo-white-glow-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2be387" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Shepardess is a weather and stormchasing info hub. Discover stormchasers and nowcasters, check daily forecasts from multiple sources, or past outbreaks. Everything in one place!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta property="og:title" content="nnexsus.net" />
+    <meta property="og:description" content="nnexsus.net is a windows 7 design inspired site for viewing my weather photos and videos in high quality!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nnexsus.net" />
+    <meta property="og:image" content="%PUBLIC_URL%/Screenshot_2.png" />
+    <meta name="theme-color" content="#2be387">
+    
+    <meta name="twitter:card" content="summary_large_image">
+    
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://nnexsus.net/" />
+    <meta property="twitter:title" content="nnexsus.net" />
+    <meta property="twitter:description" content="nnexsus.net is a windows 7 design inspired site for viewing my weather photos and videos in high quality!" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/Screenshot_2.png" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/signature-logo-white-glow-512.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="preconnect" href="https://arina.lol">
+    <link rel="preload" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" as="style" onload="this.onload=null;this.rel='stylesheet'" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <title>nnexsus.net</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
