Visual update and function test

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>nnexsus.net</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/signature-logo-white-glow-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2be387" />
     <meta
       name="description"
-      content="Shepardess is a weather and stormchasing info hub. Discover stormchasers and nowcasters, check daily forecasts from multiple sources, or past outbreaks. Everything in one place!"
+      content="nnexsus.net is a windows 7 design inspired site for viewing my weather photos and videos in high quality!"
     />
 
     <meta property="og:title" content="nnexsus.net" />
     <meta property="og:description" content="nnexsus.net is a windows 7 design inspired site for viewing my weather photos and videos in high quality!" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://arina.lol/api/win7/acfile/1724080982158DSC_1134_1_result.JPG" />
     <meta property="og:url" content="https://nnexsus.net" />
-    <meta property="og:image" content="%PUBLIC_URL%/Screenshot_2.png" />
-    <meta name="theme-color" content="#2be387">
-    
-    <meta name="twitter:card" content="summary_large_image">
-    
+    <meta name="theme-color" content="#2be387"/>
+
+    <meta name="twitter:card" content="summary_large_image"/>
+  
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="314" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://nnexsus.net/" />
     <meta property="twitter:title" content="nnexsus.net" />
     <meta property="twitter:description" content="nnexsus.net is a windows 7 design inspired site for viewing my weather photos and videos in high quality!" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/Screenshot_2.png" />
+    <meta property="twitter:image" content="https://arina.lol/api/win7/acfile/1724080982158DSC_1134_1_result.JPG" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/signature-logo-white-glow-512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -31,7 +34,6 @@
     <link rel="preconnect" href="https://arina.lol">
     <link rel="preload" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" as="style" onload="this.onload=null;this.rel='stylesheet'" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <title>nnexsus.net</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
